feat: new routes  swagger
